round resolve fix, gold abilities implementation, dice for each player
